Added a new file

--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -461,7 +461,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 12. Number of days in specific month"
+    "### 12. Merge lists element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given two lists sorted in increasing order, create and return a merged list of all the \n",
+    "# elements in sorted order.You may modify the passed in lists.Ideally, the solution should\n",
+    "# work in \"linear\" time, making a single pass of both lists.\n",
+    "\n",
+    "list1 = ['aa', 'xx', 'zz'] #['aa', 'xx']         ['aa', 'aa']\n",
+    "list2 = ['bb', 'cc']       #['bb', 'cc', 'zz']   ['aa', 'bb', 'bb']\n",
+    "\n",
+    "list1 = list1 + list2\n",
+    "print('Time complexity not linear:',sorted(list1))\n",
+    "\n",
+    "'''Or'''\n",
+    "# Time complexity is linear\n",
+    "\n",
+    "list1 = ['aa', 'xx', 'zz'] \n",
+    "list2 = ['bb', 'cc']\n",
+    "lis3= []\n",
+    "i,j= 0,0\n",
+    "\n",
+    "while(i<len(list1) and j< len(list2)):\n",
+    "    if list1[i]<list2[j]:\n",
+    "        lis3.append(list1[i])\n",
+    "        i+=1\n",
+    "    else:\n",
+    "        lis3.append(list2[j])\n",
+    "        j+=1\n",
+    "\n",
+    "while(i<len(list1) ):\n",
+    "    lis3.append(list1[i])\n",
+    "    i+=1\n",
+    "\n",
+    "while(j<len(list2) ):\n",
+    "    lis3.append(list1[j])\n",
+    "    j+=1\n",
+    "\n",
+    "print('Time complexity is linear:',lis3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 13. Number of days in specific month"
    ]
   },
   {
@@ -512,11 +562,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 14. Create dictionary"
+   ]
   },
   {
    "cell_type": "code",
@@ -537,10 +587,10 @@
    ],
    "source": [
     "# Create a dictionary myaddress. Choose relevant keys, and separate your address into \n",
-    "  street address, city, state, and postal code portions, all of which \n",
-    "# are strings (for your ZIP Code, don’t enter it in as a number).\n",
+    "# street address, city, state, and postal code portions, all of which are strings\n",
+    "# (for your ZIP Code, don’t enter it in as a number).\n",
     "\n",
-    "#myaddress = {'street':'3225 West Foster Avenue','city':'Chicago', 'state':'IL','zip':'60625'}\n",
+    "# myaddress = {'street':'3225 West Foster Avenue','city':'Chicago', 'state':'IL','zip':'60625'}\n",
     "lis1= ['street','city','state','zip']\n",
     "address= {}\n",
     "for item in lis1:\n",
@@ -548,13 +598,6 @@
     "\n",
     "print('Address:',address)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
