--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -46,6 +46,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Pattern Builder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of line for pattern: 6\n",
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a Python program to construct the following pattern. \n",
+    "    Take input from User.  \n",
+    "    * \n",
+    "    * * \n",
+    "    * * * \n",
+    "    * * * * \n",
+    "    * * * * * \n",
+    "    * * * * \n",
+    "    * * * \n",
+    "    * * \n",
+    "    *     \n",
+    "\"\"\"\n",
+    "row= int(input('Enter the number of line for pattern: '))\n",
+    "for i in range(row):\n",
+    "    for j in range(i+1):\n",
+    "        print('*',end= ' ')\n",
+    "    print()\n",
+    "\n",
+    "for i in range(row-1):\n",
+    "    for j in range(row-1-i,0,-1):\n",
+    "        print('*',end= ' ')\n",
+    "    print()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
