--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -61,6 +61,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Code Breaker "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computer generated 4 digit code: 9078\n",
+      "Guess the 4 digit code: 9124\n",
+      "Digits are guessed correctly in the correct place: 1\n",
+      "Digits are guessed correctly but in the wrong place: 0\n",
+      "\"LOSE\" – run out of guesses.\n",
+      "\n",
+      "Computer generated 4 digit code: 4119\n",
+      "Guess the 4 digit code: 1165\n",
+      "Digits are guessed correctly in the correct place: 1\n",
+      "Digits are guessed correctly but in the wrong place: 1\n",
+      "\"LOSE\" – run out of guesses.\n",
+      "\n",
+      "Computer generated 4 digit code: 8148\n",
+      "Guess the 4 digit code: 8414\n",
+      "Digits are guessed correctly in the correct place: 1\n",
+      "Digits are guessed correctly but in the wrong place: 3\n",
+      "\"LOSE\" – run out of guesses.\n",
+      "\n",
+      "Computer generated 4 digit code: 3295\n",
+      "Guess the 4 digit code: 3259\n",
+      "Digits are guessed correctly in the correct place: 2\n",
+      "Digits are guessed correctly but in the wrong place: 2\n",
+      "\"LOSE\" – run out of guesses.\n",
+      "\n",
+      "Computer generated 4 digit code: 9060\n",
+      "Guess the 4 digit code: 9060\n",
+      "Digits are guessed correctly in the correct place: 4\n",
+      "Digits are guessed correctly but in the wrong place: 0\n",
+      "\"WIN\" – guess the right code.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    The computer generates a 4 digit code\n",
+    "    The user types in a 4 digit code. Their guess.\n",
+    "    The computer tells them how many digits they guessed correctly\n",
+    "Extension:\n",
+    "    the computer tells them how many digits are guessed correctly \n",
+    "    in the correct place and how many digits have\n",
+    "    been guessed correctly but in the wrong place.\n",
+    "    The user gets 12 guesses to either \n",
+    "    WIN – guess the right code. \n",
+    "    Or\n",
+    "    LOSE – run out of guesses.   \n",
+    "\"\"\"\n",
+    "from random import randrange\n",
+    "\n",
+    "for i in range(13):\n",
+    "    comp = str(randrange(10))+ str(randrange(10))+ str(randrange(10))+ str(randrange(10))\n",
+    "    print('Computer generated 4 digit code:',comp)\n",
+    "\n",
+    "    guess= input('Guess the 4 digit code: ')\n",
+    "    corr_pl= 0\n",
+    "    corr_wr= 0\n",
+    "    \n",
+    "    for ind, digit in enumerate(guess):\n",
+    "        if digit== comp[ind]:\n",
+    "            corr_pl += 1\n",
+    "        elif digit in comp:\n",
+    "            corr_wr += 1\n",
+    "\n",
+    "    print('Digits are guessed correctly in the correct place:',corr_pl)\n",
+    "    print('Digits are guessed correctly but in the wrong place:',corr_wr)\n",
+    "\n",
+    "    if corr_pl==4:\n",
+    "        print('\"WIN\" – guess the right code.')\n",
+    "        break\n",
+    "    else:\n",
+    "        print('\"LOSE\" – run out of guesses.\\n')\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
