--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -104,10 +104,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### 03. Pallindromic Integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter space separated values : 12 29 61 55 14\n",
+      "['12', '29', '61', '55', '14']\n",
+      "[12, 29, 61, 55, 14]\n",
+      "Palindromic integer found: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    You are given a space separated list of integers. \n",
+    "    If all the integers are positive and if \"any integer\" is a palindromic integer, \n",
+    "    then you need to print True else print False.      \n",
+    "Hint: \n",
+    "    A palindromic number or numeral palindrome is a number that remains the same\n",
+    "    when its digits are reversed. Like 16461, for example, it is \"symmetrical\"   \n",
+    "Sample Input:\n",
+    "    12 9 61 5 14\n",
+    "    12 29 61 55 14\n",
+    "Sample Output:\n",
+    "    True     \n",
+    "\"\"\"\n",
+    "lis_str= input(\"Enter space separated values : \").split()   \n",
+    "lis_int= list(map(int, lis_str))\n",
+    "print(lis_str)      # list with integers in string form\n",
+    "print(lis_int)      # list with integers\n",
+    "\n",
+    "flag=0\n",
+    "for num in lis_int:     # checking if no. is +ve or -ve\n",
+    "    if num> 0:\n",
+    "        flag=1\n",
+    "    else:\n",
+    "        flag=0\n",
+    "        break\n",
+    "\n",
+    "if flag==1:             # if +ve then checking there is any Palindromic integer or not\n",
+    "    for index, st in enumerate(lis_str):\n",
+    "        if st==st[::-1]:\n",
+    "            print('Palindromic integer found: True')\n",
+    "            break\n",
+    "        elif index== (len(lis_str)-1):\n",
+    "            print('Palindromic integer found: False')\n",
+    "else:\n",
+    "    print('Palindromic integer found: False')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
