Did some more changes

--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -44,7 +44,7 @@
     "\"\"\"\n",
     "import random\n",
     "\n",
-    "treasure = [[random.randrange(0,2) for x in range(10)] for x in range(10)] \n",
+    "treasure = [[random.randrange(0,2) for x in range(10)] for x in range(10)]    # list comprehension\n",
     "for i in range(len(treasure)):  \n",
     "    for j in range(len(treasure[i])):  \n",
     "        print(treasure[i][j], end=\"\\t\") \n",
@@ -115,13 +115,10 @@
     "    The user types in a 4 digit code. Their guess.\n",
     "    The computer tells them how many digits they guessed correctly\n",
     "Extension:\n",
-    "    the computer tells them how many digits are guessed correctly \n",
-    "    in the correct place and how many digits have\n",
-    "    been guessed correctly but in the wrong place.\n",
-    "    The user gets 12 guesses to either \n",
-    "    WIN – guess the right code. \n",
-    "    Or\n",
-    "    LOSE – run out of guesses.   \n",
+    "    the computer tells them how many digits are guessed correctly in the correct \n",
+    "    place and how many digits have been guessed correctly but in the wrong place.\n",
+    "    The user gets 12 guesses to either WIN – guess the right code. \n",
+    "    Or LOSE – run out of guesses.   \n",
     "\"\"\"\n",
     "from random import randrange\n",
     "\n",
@@ -130,8 +127,8 @@
     "    print('Computer generated 4 digit code:',comp)\n",
     "\n",
     "    guess= input('Guess the 4 digit code: ')\n",
-    "    corr_pl= 0\n",
-    "    corr_wr= 0\n",
+    "    corr_pl= 0              # store digits guessed correctly in the correct place\n",
+    "    corr_wr= 0              # store digits guessed correctly but in the wrong place\n",
     "    \n",
     "    for ind, digit in enumerate(guess):\n",
     "        if digit== comp[ind]:\n",
