--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -168,6 +168,58 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 04. Centered Average "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter space separated values: 1 2 3 4 100 \n",
+      "[1, 2, 3, 4, 100]\n",
+      "[2, 3, 4]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Return the \"centered average\" of an array of integers, which we'll say is the mean\n",
+    "    average of the values, except ignoring the largest and smallest values in the array. \n",
+    "    If there are multiple copies of the smallest value, ignore just one copy, and \n",
+    "    likewise for the largest value. Use int division to produce the final average. \n",
+    "    You may assume that the array is length 3 or more.\n",
+    "Sample Input:\n",
+    "    1, 2, 3, 4, 100 \n",
+    "Sample Output:\n",
+    "    3 \n",
+    "\"\"\"   \n",
+    "#lis1= input(\"Enter values: \").split()\n",
+    "\n",
+    "lis1= list(map(int, input(\"Enter space separated values: \").split()))\n",
+    "print(lis1)\n",
+    "\n",
+    "#lis1= [1, 2, 3, 4, 100]\n",
+    "lis1.remove(min(lis1))\n",
+    "lis1.remove(max(lis1))\n",
+    "print(lis1)\n",
+    "\n",
+    "avg= sum(lis1)//len(lis1)\n",
+    "print(avg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
