Adding new files

--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -174,17 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter space separated values: 1 2 3 4 100 \n",
-      "[1, 2, 3, 4, 100]\n",
+      "Enter space separated values: 1 2 3 4 100\n",
       "[2, 3, 4]\n",
-      "3\n"
+      "Centered Average: 3\n"
      ]
     }
    ],
@@ -200,19 +199,15 @@
     "    1, 2, 3, 4, 100 \n",
     "Sample Output:\n",
     "    3 \n",
-    "\"\"\"   \n",
-    "#lis1= input(\"Enter values: \").split()\n",
+    "\"\"\" \n",
+    "lis1= list(map(int, input(\"Enter space separated values: \").split())) # taking input as integer\n",
     "\n",
-    "lis1= list(map(int, input(\"Enter space separated values: \").split()))\n",
-    "print(lis1)\n",
-    "\n",
-    "#lis1= [1, 2, 3, 4, 100]\n",
     "lis1.remove(min(lis1))\n",
     "lis1.remove(max(lis1))\n",
     "print(lis1)\n",
     "\n",
     "avg= sum(lis1)//len(lis1)\n",
-    "print(avg)\n"
+    "print('Centered Average:',avg)\n"
    ]
   },
   {
