--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -211,6 +211,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. Unlucky 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter space separated values: 13, 1, 2, 13, 2, 1, 13\n",
+      "Desired sum: 3\n",
+      "\n",
+      "List of index of 13 and its following element: [0, 1, 3, 4, 6]\n",
+      "Desired sum: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Return the sum of the numbers in the array, returning 0 for an empty array. \n",
+    "    Except the number 13 is very unlucky, so it does not count and numbers that \n",
+    "    come immediately after a 13 also do not count\n",
+    "    Take input from user\n",
+    "Sample Input:\n",
+    "    13, 1, 2, 13, 2, 1, 13 \n",
+    "    1, 13, 1, 2, 5, 2, 13, 2, 1, 13, 9\n",
+    "Sample Output:\n",
+    "    3\n",
+    "    11\n",
+    "\"\"\" \n",
+    "# taking values as int\n",
+    "lis1= list(map(int, input(\"Enter space separated values: \").split(',')))\n",
+    "\n",
+    "ind=0       # counter     \n",
+    "lsum1=0     # sum\n",
+    "while(ind< len(lis1)):\n",
+    "    if lis1[ind]== 13:    # if 13 found then counter jump 2 place\n",
+    "        ind+= 2\n",
+    "    else:                 # else counter jump 1 place\n",
+    "        lsum1+= lis1[ind]\n",
+    "        ind+= 1\n",
+    "print('Desired sum:',lsum1)\n",
+    "print()\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "lis2= []\n",
+    "lsum2= 0\n",
+    "for index, num in enumerate(lis1):\n",
+    "    if num== 13:                # if 13 found then index of 13 and its following no. \n",
+    "        lis2.append(index)      # store in lis2 \n",
+    "        if index < len(lis1)-1:\n",
+    "            lis2.append(index+1)\n",
+    "print('List of index of 13 and its following element:',lis2)\n",
+    "\n",
+    "for index, num in enumerate(lis1):    # checking if lis1 element's index is not in\n",
+    "    if index not in lis2:             # lis2 then sum those element\n",
+    "        lsum2= lsum2+ num\n",
+    "print('Desired sum:',lsum2)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
