--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -148,6 +148,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Random Game 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number: 20\n",
+      "The player and the computer can remove 1,2 or 3 from the number.\n",
+      "How many do you want to remove?: 3\n",
+      "Number: 17\n",
+      "\n",
+      "Computer removed: 1\n",
+      "Number: 16\n",
+      "\n",
+      "How many do you want to remove?: 2\n",
+      "Number: 14\n",
+      "\n",
+      "Computer removed: 2\n",
+      "Number: 12\n",
+      "\n",
+      "How many do you want to remove?: 1\n",
+      "Number: 11\n",
+      "\n",
+      "Computer removed: 3\n",
+      "Number: 8\n",
+      "\n",
+      "How many do you want to remove?: djsk\n",
+      "\n",
+      "No valid integer. Please try again...\n",
+      "How many do you want to remove?: \n",
+      "\n",
+      "No valid integer. Please try again...\n",
+      "How many do you want to remove?: 10\n",
+      "\n",
+      "Input value is out of range. Please try again...\n",
+      "How many do you want to remove?: 13\n",
+      "\n",
+      "Input value is out of range. Please try again...\n",
+      "How many do you want to remove?: jfhj\n",
+      "\n",
+      "No valid integer. Please try again...\n",
+      "How many do you want to remove?: 2\n",
+      "Number: 6\n",
+      "\n",
+      "Computer removed: 2\n",
+      "Number: 4\n",
+      "\n",
+      "How many do you want to remove?: 2\n",
+      "Number: 2\n",
+      "\n",
+      "Computer removed: 2\n",
+      "Number: 0\n",
+      "\n",
+      "Player won and Computer lose.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a program for a game where the computer generates a random starting\n",
+    "    number between 20 and 30. The player and the computer can remove 1,2 or 3 \n",
+    "    from the number in turns. Something like this...\n",
+    "    Starting number : 25\n",
+    "    How many do you want to remove? 3\n",
+    "    22 left\n",
+    "    Computer removes 2\n",
+    "    20 left\n",
+    "    The player who has to remove the last value to bring the number\n",
+    "    down to 0 is the loser.\n",
+    "    1 left\n",
+    "    Computer removes 1\n",
+    "    You win!\n",
+    "    Easy option\n",
+    "    Get the computer to choose a number between 1—3 at random\n",
+    "\"\"\" \n",
+    "\n",
+    "from random import randrange\n",
+    "\n",
+    "num= randrange(20,31)     # generating random number\n",
+    "print('Number:',num)\n",
+    "print('The player and the computer can remove 1,2 or 3 from the number.')\n",
+    "i=0\n",
+    "\n",
+    "while(num> 0 and i>=0):\n",
+    "    if i%2==0:               # for even turns player remove value\n",
+    "        while(True):\n",
+    "            try:             # Error handling for non-integer values\n",
+    "                user= int(input('How many do you want to remove?: '))\n",
+    "                if user in range(1,4):\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print('\\nInput value is out of range. Please try again...')\n",
+    "            except ValueError:\n",
+    "                print('\\nNo valid integer. Please try again...')\n",
+    "                \n",
+    "        num= num- user   \n",
+    "        print('Number:',num)    # displaying the subtracted number\n",
+    "        print()\n",
+    "    else:                       # for odd turns computer remove value  \n",
+    "        comp= randrange(1,4)\n",
+    "        num= num- comp\n",
+    "        print('Computer removed:',comp)\n",
+    "        print('Number:',num)\n",
+    "        print()\n",
+    "    i+=1\n",
+    "    \n",
+    "i-=1\n",
+    "print('Computer won and Player lose.') if i%2==0 else print('Player won and Computer lose.')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
