--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -271,6 +271,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Random Game 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
+      "Next number: 6\n",
+      "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 10\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
+      "Next number: 5\n",
+      "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 7\n",
+      "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 5\n",
+      "\n",
+      "This is your second chance.\n",
+      "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 5\n",
+      "\n",
+      "Your lives has finished.\n",
+      "You loss\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a program for a Higher / Lower guessing game. The computer randomly\n",
+    "    generates a sequence of up to 10 numbers between 1 and 13. The player each \n",
+    "    after seeing each number in turn has to decide whether the next number is \n",
+    "    higher or lower. If you can remember Brucie’s ‘Play your cards right’ it’s \n",
+    "    basically that. If you get 10 guesses right you win the game.\n",
+    "    Starting number : 12\n",
+    "    Higher(H) or lower(L)? L\n",
+    "    Next number 8\n",
+    "    Higher(H) or lower(L)? L\n",
+    "    Next number 11\n",
+    "    You lose\n",
+    "Extension:\n",
+    "    Give the players two lives.Make sure only H or L can be entered \n",
+    "\"\"\" \n",
+    "\n",
+    "from random import randrange\n",
+    "\n",
+    "num1= randrange(1,14)       # generating first number between 1 to 13\n",
+    "print(num1)\n",
+    "flag=0\n",
+    "lives= 0                    # variable to store lives\n",
+    "\n",
+    "def check(lives):           # function for checking the lives\n",
+    "    if lives==1:\n",
+    "        print('\\nThis is your second chance.') \n",
+    "        return False\n",
+    "    if lives==2:\n",
+    "        print('\\nYour lives has finished.')\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    guess= input('Enter your guess, Higher(H) or lower(L): ')\n",
+    "    num2= randrange(1,14)        # generating second number between 1 to 13\n",
+    "    print('Next number:',num2)\n",
+    "    \n",
+    "    if (guess=='H' or guess=='h'):  # if guess is 'H' then checking the second number\n",
+    "        if num2> num1:\n",
+    "            num1= num2\n",
+    "            flag+=1             # if guess is correct then up the flag\n",
+    "        else:                   # increment in lives if guess has become wrong\n",
+    "            lives+= 1\n",
+    "            if check(lives):\n",
+    "                break\n",
+    "    elif (guess=='L' or guess=='l'):  # if guess is 'L' then checking the second number\n",
+    "        if num2< num1:\n",
+    "            num1= num2\n",
+    "            flag+=1             # if guess is correct then up the flag \n",
+    "        else:                   # increment in lives if guess has become wrong\n",
+    "            lives+= 1\n",
+    "            if check(lives):\n",
+    "                break\n",
+    "\n",
+    "# checking the flag if flag== i then won else loss the game\n",
+    "print('You guessed all number correctly. You Won') if flag== 9 else print('You loss')\n",
+    "    \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
