--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -44,6 +44,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Pangram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: Sphinx of black quartz, judge my vow.\n",
+      "PANAGRAM\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a Python function to check whether a string is PANGRAM or not\n",
+    "Hint: \n",
+    "    Pangrams are words or sentences containing every letter of the alphabet at least once.\n",
+    "    For example: \"The quick brown fox jumps over the lazy dog\"  is a PANGRAM.  \n",
+    "Sample Input:\n",
+    "    The five boxing wizards jumps. \n",
+    "    Sphinx of black quartz, judge my vow.\n",
+    "    The jay, pig, fox, zebra and my wolves quack!\n",
+    "    Pack my box with five dozen liquor jugs.\n",
+    "Sample Output:\n",
+    "    NOT PANGRAM \n",
+    "    PANGRAM\n",
+    "    PANGRAM\n",
+    "    PANGRAM\n",
+    "\"\"\"  \n",
+    "def panagram(inp):    # function definition\n",
+    "    flag= 0\n",
+    "    str2= ''+ str1.lower()  # making lowercase string of input\n",
+    "    for char in alph:       # checking for every character\n",
+    "        if char in str2:\n",
+    "            flag= 1\n",
+    "        else:\n",
+    "            flag= 0\n",
+    "            break\n",
+    "\n",
+    "    print('PANAGRAM') if flag==1 else print('NOT PANAGRAM')\n",
+    "\n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "alph= 'abcdefghijklmnopqrstuvwxyz'  # string to compare with input string for lowercase only \n",
+    "panagram(str2)     # calling the function\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
