Added a new file

--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -101,6 +101,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Reverse Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: I am testing\n",
+      "gnitset ma I\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Define a function reverse() that computes the reversal of a string.\n",
+    "    Without using Python's inbuilt function\n",
+    "Sample Input:\n",
+    "    I am testing\n",
+    "Sample Output:\n",
+    "    gnitset ma I\n",
+    "\"\"\" \n",
+    "\n",
+    "def reverse(str1):\n",
+    "    print(str1[::-1])\n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "reverse(str1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
