--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -140,6 +140,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Translate Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: This is fun\n",
+      "ToThohisos isos fofunon\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a function translate() that will translate a text into \"rövarspråket\" \n",
+    "    Swedish for \"robber's language\". That is, double every consonant and place \n",
+    "    an occurrence of \"o\" in between.\n",
+    "Sample Input:\n",
+    "    This is fun\n",
+    "Sample Output:\n",
+    "    ToThohisos isos fofunon\n",
+    "\"\"\"\n",
+    "\n",
+    "def translate(str1):    # function definition\n",
+    "    name= ''\n",
+    "    vowel= 'AEIOUaeiou '\n",
+    "    for ch in str1:\n",
+    "        name+= ch+ 'o'+ ch if ch not in vowel else ch\n",
+    "    print(name)\n",
+    "\n",
+    "str1= input('Enter the sentence: ')\n",
+    "translate(str1)     # calling the function\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
