--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -281,6 +281,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 06. Operations Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter space separated values: 5 2 6 2 3 5\n",
+      "Sum = 23\n",
+      "Multiplication = 1800\n",
+      "Largest = 6\n",
+      "Smallest = 2\n",
+      "Sorted list  = [2, 2, 3, 5, 5, 6]\n",
+      "List with unique values = [2, 3, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write following functions for list operations. Take list as input from the User\n",
+    "    Add(), Multiply(), Largest(), Smallest(), Sorting(), Remove_Duplicates(), Print()\n",
+    "    Only call Print() function to display the results in the below displayed \n",
+    "    format (i.e all the functions must be called inside the print() function \n",
+    "    and only the Print() is to be called in the main script) \n",
+    "Sample Input:\n",
+    "    5,2,6,2,3\n",
+    "Sample Output:\n",
+    "    Sum = 18\n",
+    "    Multiply = 360\n",
+    "    Largest = 6\n",
+    "    Smallest = 2\n",
+    "    Sorted = [2, 2, 3, 5, 6]\n",
+    "    Without Duplicates = [2, 3, 5, 6]\n",
+    "\"\"\" \n",
+    "\n",
+    "def Add(num):       # function to add\n",
+    "    print('Sum =',sum(num))\n",
+    "\n",
+    "def Multiply(num):  # function to multiply\n",
+    "    mult= 1\n",
+    "    for val in num: mult*= val\n",
+    "    print('Multiplication =',mult)\n",
+    "\n",
+    "def Largest(num):         # function to find maximum\n",
+    "    print('Largest =',max(num))\n",
+    "\n",
+    "def Smallest(num):        # function to find minimum\n",
+    "    print('Smallest =',min(num))\n",
+    "\n",
+    "def Sorting(num):       # function for sorting\n",
+    "    num.sort()\n",
+    "    print('Sorted list  =',num)\n",
+    "\n",
+    "def Remove_Duplicates(num):  # function to remove duplicates\n",
+    "    lis2= []\n",
+    "    for i in num:\n",
+    "        while(i not in lis2):\n",
+    "            lis2.append(i)\n",
+    "    print('List with unique values =',lis2)\n",
+    "    \n",
+    "def Print(num):      # function to print\n",
+    "    Add(num)\n",
+    "    Multiply(num)\n",
+    "    Largest(num)\n",
+    "    Smallest(num)\n",
+    "    Sorting(num) \n",
+    "    Remove_Duplicates(num)\n",
+    "\n",
+    "\n",
+    "lis= list(map(int, input('Enter space separated values: ').split() ))\n",
+    "Print(lis)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
