Added a new file

--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -184,6 +184,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. Anagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: Listen\n",
+      "Enter string: Silent\n",
+      "Anagram strings\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "   Two words are anagrams if you can rearrange the letters of one to spell the second.  \n",
+    "   For example, the following words are anagrams:\n",
+    "   ['abets', 'baste', 'bates', 'beast', 'beats', 'betas', 'tabes']\n",
+    "   create a function which takes two arguments and return whether they are angram or not.  \n",
+    "\"\"\" \n",
+    "\n",
+    "def anagram(a,b):          # set has unique characters\n",
+    "    c= True if set(a)== set(b) else False  \n",
+    "    return c\n",
+    "    \n",
+    "str1= input('Enter string: ').lower()\n",
+    "str2= input('Enter string: ').lower()\n",
+    "print('Anagram strings') if anagram(str1,str2) else print('Not Anagram strings')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
