Added a new file

--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -279,28 +279,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "Enter your guess, Higher(H) or lower(L): L\n",
-      "Next number: 6\n",
+      "6\n",
       "Enter your guess, Higher(H) or lower(L): H\n",
-      "Next number: 10\n",
+      "Next number: 11\n",
       "Enter your guess, Higher(H) or lower(L): L\n",
-      "Next number: 5\n",
+      "Next number: 1\n",
       "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 12\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
       "Next number: 7\n",
-      "Enter your guess, Higher(H) or lower(L): H\n",
-      "Next number: 5\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
+      "Next number: 11\n",
       "\n",
       "This is your second chance.\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
+      "Next number: 3\n",
       "Enter your guess, Higher(H) or lower(L): H\n",
-      "Next number: 5\n",
+      "Next number: 13\n",
+      "Enter your guess, Higher(H) or lower(L): L\n",
+      "Next number: 7\n",
+      "Enter your guess, Higher(H) or lower(L): H\n",
+      "Next number: 3\n",
       "\n",
       "Your lives has finished.\n",
       "You loss\n"
@@ -364,8 +370,104 @@
     "                break\n",
     "\n",
     "# checking the flag if flag== i then won else loss the game\n",
-    "print('You guessed all number correctly. You Won') if flag== 9 else print('You loss')\n",
+    "print('You guessed all number correctly. You Won.') if flag== i else print('You loss.')\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. Playing Cards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;30;47m King Spades(♠) \n",
+      "\u001b[1;31;47m 3 Diamonds(♦) \n",
+      "\u001b[1;31;47m 3 Hearts(♥) \n",
+      "\u001b[1;30;47m 8 Spades(♠) \n",
+      "\u001b[1;31;47m Jack Hearts(♥) \n",
+      "\u001b[1;31;47m 8 Hearts(♥) \n",
+      "\u001b[1;31;47m 4 Diamonds(♦) \n",
+      "\u001b[1;30;47m 8 Clubs(♣) \n",
+      "\u001b[1;30;47m 4 Clubs(♣) \n",
+      "\u001b[1;30;47m Queen Clubs(♣) \n",
+      "\u001b[1;30;47m King Clubs(♣) \n",
+      "\u001b[1;30;47m 7 Clubs(♣) \n",
+      "\u001b[1;30;47m 10 Clubs(♣) \n",
+      "\u001b[1;30;47m Jack Clubs(♣) \n",
+      "\u001b[1;30;47m 9 Spades(♠) \n",
+      "\u001b[1;31;47m 6 Hearts(♥) \n",
+      "\u001b[1;31;47m 8 Diamonds(♦) \n",
+      "\u001b[1;30;47m Ace Spades(♠) \n",
+      "\u001b[1;31;47m 10 Hearts(♥) \n",
+      "\u001b[1;31;47m 5 Diamonds(♦) \n",
+      "\u001b[1;30;47m 5 Clubs(♣) \n",
+      "\u001b[1;30;47m Ace Clubs(♣) \n",
+      "\u001b[1;31;47m Ace Diamonds(♦) \n",
+      "\u001b[1;31;47m 2 Diamonds(♦) \n",
+      "\u001b[1;31;47m 9 Diamonds(♦) \n",
+      "\u001b[1;31;47m 5 Hearts(♥) \n",
+      "\u001b[1;31;47m Jack Diamonds(♦) \n",
+      "\u001b[1;31;47m Ace Hearts(♥) \n",
+      "\u001b[1;30;47m 9 Clubs(♣) \n",
+      "\u001b[1;31;47m 7 Hearts(♥) \n",
+      "\u001b[1;30;47m Jack Spades(♠) \n",
+      "\u001b[1;30;47m 3 Spades(♠) \n",
+      "\u001b[1;31;47m Queen Hearts(♥) \n",
+      "\u001b[1;30;47m 2 Spades(♠) \n",
+      "\u001b[1;30;47m 5 Spades(♠) \n",
+      "\u001b[1;30;47m 4 Spades(♠) \n",
+      "\n",
+      "\u001b[1;30;47mTotal cards generated randomly: 36 out of 52\n",
+      "Due to generation of some duplicate cards.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a program that will generate a random playing card e.g. ‘9 Hearts’, \n",
+    "    ‘Queen Spades’ when the return key is pressed. Rather than generate a random \n",
+    "    number from 1 to 52. Create two random numbers – one for the suit and one for \n",
+    "    the card. However we don't want the same card drawn twice.\n",
+    "Extension:\n",
+    "    Update this program by using an list to prevent the same card being dealt \n",
+    "    twice from the pack of cards. Convert this code into a procedure ‘DealCard’ \n",
+    "    that will display the card dealt or ‘no more cards’. Call your procedure 53 times! \n",
+    "\"\"\" \n",
+    "\n",
+    "from random import choice\n",
+    "\n",
+    "card= []                       # empty list\n",
+    "def DealCard(rank,suit):       # function definition\n",
+    "    for val in range(53):    \n",
+    "        a= choice(rank)        # randomly choice the rank of card\n",
+    "        b= choice(suit)        # randomly choice the suit of card\n",
+    "        while((a,b) not in card):\n",
+    "            card.append((a,b))\n",
+    "\n",
+    "            if b in ['Diamonds(♦)', 'Hearts(♥)']:    # using unicode for colour printing\n",
+    "                print(\"\\033[1;31;47m {} {} \".format(a,b))  \n",
+    "            else:            \n",
+    "                print(\"\\033[1;30;47m {} {} \".format(a,b))        \n",
+    "\n",
+    "    print('\\n\\033[1;30;47mTotal cards generated randomly: {} out of 52'.format(len(card)))\n",
+    "    print('Due to generation of some duplicate cards.')\n",
+    "\n",
+    "\n",
+    "rank= ['Ace', 2, 3, 4, 5, 6, 7, 8, 9, 10, 'Jack', 'Queen', 'King']\n",
+    "suit= ['Clubs(♣)', 'Diamonds(♦)', 'Hearts(♥)', 'Spades(♠)']\n",
+    "DealCard(rank,suit)           # calling the function\n",
+    "\n"
    ]
   },
   {
