Added a new file

--- a/6_Python_List_Challenges/Random_Game.ipynb
+++ b/6_Python_List_Challenges/Random_Game.ipynb
@@ -471,6 +471,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 06. Blackjack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You get the number: 26\n",
+      "Computer gets the number: 12\n",
+      "You won.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Play a game that draws two random cards. The player then decides to \n",
+    "    draw or stick. If the score goes over 21 the player loses (goes ‘bust’).\n",
+    "    Keep drawing until the player sticks. After the player sticks draw two \n",
+    "    computer cards. If the player beats the score they win.  \n",
+    "\"\"\"\n",
+    "\n",
+    "from random import choice\n",
+    "\n",
+    "list1 = [1,2,3,4,5,6,7,8,9,10,11,12,13]\n",
+    "user1 = choice(list1)\n",
+    "user2 = choice(list1)\n",
+    "print(\"You get the number:\",user1+user2)\n",
+    "if (k+l)< 21:\n",
+    "    comp1= choice(list1)\n",
+    "    comp2 = choice(list1)\n",
+    "    print(\"Computer gets the number:\",comp1+comp2)\n",
+    "    \n",
+    "    if (comp1+comp2)<(user1+user2):\n",
+    "        print(\"You won.\")\n",
+    "    else:\n",
+    "        print(\"Computer won.\")\n",
+    "else:\n",
+    "    print(\"You bust.\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
