Added a new file

--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -224,6 +224,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 06. Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name wise sorting: [('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93), ('Json', 21, 85), ('Tom', 19, 80)]\n",
+      "Age wise sorting: [('Jony', 17, 91), ('Jony', 17, 93), ('Tom', 19, 80), ('John', 20, 90), ('Json', 21, 85)]\n",
+      "Height wise sorting: [('Tom', 19, 80), ('Json', 21, 85), ('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    You are required to write a program to sort the (name, age, height) \n",
+    "    tuples by ascending order where name is string, age and height are numbers. \n",
+    "    The tuples are input by console. The sort criteria is:\n",
+    "    1: Sort based on name;\n",
+    "    2: Then sort based on age;\n",
+    "    3: Then sort by score. \n",
+    "    The priority is that name > age > score \n",
+    "Sample Input:\n",
+    "    Tom,19,80\n",
+    "    John,20,90\n",
+    "    Jony,17,91\n",
+    "    Jony,17,93\n",
+    "    Json,21,85\n",
+    "Sample Output:\n",
+    "    [('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93), ('Json', 21, 85), ('Tom', 19, 80)]\n",
+    "\"\"\"\n",
+    "\n",
+    "lis1= [('Tom', 19, 80), ('John',20,90), ('Jony',17,91), ('Jony',17,93), ('Json',21,85)]\n",
+    "\n",
+    "# sort name wise\n",
+    "lis1.sort()\n",
+    "print('Name wise sorting:',lis1)\n",
+    "\n",
+    "# sort age wise\n",
+    "lis1.sort(key= lambda x: x[1])\n",
+    "print('Age wise sorting:',lis1)\n",
+    "\n",
+    "# sort height wise\n",
+    "lis1.sort(key= lambda x: x[2])\n",
+    "print('Height wise sorting:',lis1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
