Added a new file

--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -364,6 +364,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07. Bricks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the ',' separated values values: 2,2,4\n",
+      "FALSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    We want to make a row of bricks that is target inches long. \n",
+    "    We have a number of small bricks (1 inch each) and big bricks (5 inches each). \n",
+    "    Make a function that prints True if it is possible to make the exact target \n",
+    "    by choosing from the given bricks or False otherwise. \n",
+    "    Take list as input from user where its 1st element represents number of small bricks, \n",
+    "    middle element represents number of big bricks and 3rd element represents the target.\n",
+    "Sample Input:\n",
+    "    2, 2, 11\n",
+    "Sample Output:\n",
+    "    True\n",
+    "\"\"\" \n",
+    "\n",
+    "def small_target(lis):    \n",
+    "    \"\"\"This function is used for small target calculation. \"\"\"\n",
+    "    tgt= 0\n",
+    "    flag= 0\n",
+    "    for x in range(lis[0]):\n",
+    "        tgt= tgt + 1       # increment target by one\n",
+    "        \n",
+    "        if tgt== lis[-1]:  # if tgt match with target flag up \n",
+    "            flag= 1\n",
+    "            break\n",
+    "        elif tgt!= lis[-1] and x== lis[0]:  \n",
+    "            flag= 0 \n",
+    "    return flag\n",
+    "\n",
+    "def big_target(lis):\n",
+    "    \"\"\"This function is used for big target calculation. \"\"\"\n",
+    "    tgt= 0\n",
+    "    flag= 0\n",
+    "    for x in range(lis[1]):\n",
+    "        tgt= tgt + 5\n",
+    "        \n",
+    "        if tgt> lis[-1]:  # check if tgt greater than target\n",
+    "            tgt= tgt-5\n",
+    "            break \n",
+    "        elif tgt== lis[-1]:  # check if tgt match with target\n",
+    "            flag =1\n",
+    "            break\n",
+    "\n",
+    "    while(tgt!= lis[-1] ):   # calculate tgt for value than 5\n",
+    "        tgt= tgt + 1\n",
+    "        \n",
+    "        if tgt== lis[-1]:   # check if tgt match with target\n",
+    "            flag =1\n",
+    "            break  \n",
+    "    return flag    \n",
+    "\n",
+    "\n",
+    "\n",
+    "bricks= list(map(int, input(\"Enter the ',' separated values values: \").split(','))) # input values as integer\n",
+    "if bricks[-1]< 5:\n",
+    "    flag= small_target(bricks)   # function call\n",
+    "else:\n",
+    "    flag= big_target(bricks)     # function call\n",
+    "\n",
+    "print('TRUE') if flag==1 else print('FALSE')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
