--- a/6_Python_List_Challenges/List_string.ipynb
+++ b/6_Python_List_Challenges/List_string.ipynb
@@ -232,16 +232,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name wise sorting: [('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93), ('Json', 21, 85), ('Tom', 19, 80)]\n",
-      "Age wise sorting: [('Jony', 17, 91), ('Jony', 17, 93), ('Tom', 19, 80), ('John', 20, 90), ('Json', 21, 85)]\n",
-      "Height wise sorting: [('Tom', 19, 80), ('Json', 21, 85), ('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93)]\n"
+      "Name wise sorting:\n",
+      " [('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93), ('Json', 21, 85), ('Tom', 19, 80)]\n",
+      "Age wise sorting:\n",
+      " [('Jony', 17, 91), ('Jony', 17, 93), ('Tom', 19, 80), ('John', 20, 90), ('Json', 21, 85)]\n",
+      "Height wise sorting:\n",
+      " [('Tom', 19, 80), ('Json', 21, 85), ('John', 20, 90), ('Jony', 17, 91), ('Jony', 17, 93)]\n"
      ]
     }
    ],
@@ -269,15 +272,61 @@
     "\n",
     "# sort name wise\n",
     "lis1.sort()\n",
-    "print('Name wise sorting:',lis1)\n",
+    "print('Name wise sorting:\\n',lis1)\n",
     "\n",
     "# sort age wise\n",
     "lis1.sort(key= lambda x: x[1])\n",
-    "print('Age wise sorting:',lis1)\n",
+    "print('Age wise sorting:\\n',lis1)\n",
     "\n",
     "# sort height wise\n",
     "lis1.sort(key= lambda x: x[2])\n",
-    "print('Height wise sorting:',lis1)\n"
+    "print('Height wise sorting:\\n',lis1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07. Weeks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of all days:\n",
+      "\n",
+      "('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')\n",
+      "{'Tuesday', 'Thursday', 'Saturday', 'Wednesday', 'Monday', 'Sunday', 'Friday'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a program that adds missing days to existing tuple of days \n",
+    "Sample Input:\n",
+    "    ('Monday', 'Wednesday', 'Thursday', 'Saturday')\n",
+    "Sample Output:\n",
+    "    ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')\n",
+    "\"\"\" \n",
+    "\n",
+    "days= ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')\n",
+    "tup= ('Monday', 'Wednesday', 'Thursday', 'Saturday')\n",
+    "lis1= list(tup)\n",
+    "\n",
+    "print('List of all days:\\n')\n",
+    "[lis1.insert(index,item) for index, item in enumerate(days) if item not in lis1]\n",
+    "print(tuple(lis1))\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "print(set(days).union(set(tup)))  # but order not retain in output\n"
    ]
   },
   {
